# trustwise-assignment

./: .dockerignore  .env.example  .pdm-python  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/utils/: db.py  env.py  response_evaluator.py  sample_ui.py
